Set up live reload with Air

--- a/views/index.templ
+++ b/views/index.templ
@@ -8,9 +8,9 @@ templ Index() {
 		<body>
 			<h1>Goal Setting</h1>
 			<form action="/setgoal" method="POST">
-				<label for="goal">Goal:</label>
+				<label for="goal">Achieve this:</label>
 				<input type="text" id="goal" name="goal"/>
-				<label for="deadline">Deadline:</label>
+				<label for="deadline">By then:</label>
 				<input type="date" id="deadline" name="deadline"/>
 				<input type="submit" value="Submit"/>
 			</form>
