--- a/components/index.templ
+++ b/components/index.templ
@@ -11,10 +11,10 @@ templ Index() {
 			<h1>LockeIn</h1>
 			<div id="app">
 				<form action="/goal" method="post" hx-post="/goal" hx-target="#app" hx-push-url="true">
-					<label for="goal">Achieve this:</label>
-					<input type="text" id="goal" name="goal"/>
+					<label for="name">Achieve this:</label>
+					<input type="text" id="name" name="name"/>
 					<label for="deadline">By then:</label>
-					<input type="date" id="deadline" name="deadline"/>
+					<input type="datetime-local" id="deadline" name="deadline" value="2024-10-27T22:45" />
 					<input type="submit" value="Submit"/>
 				</form>
 			</div>
