--- a/components/index.templ
+++ b/components/index.templ
@@ -6,6 +6,8 @@ templ Index() {
 			<title>LockeIn</title>
 			<meta charset="UTF-8"/>
 			<script src="/assets/htmx.min.js"></script>
+			<script src="/assets/_hyperscript.min.js"></script>
+			<link rel="stylesheet" href="/assets/style.css"/>
 		</head>
 		<body hx-boost="true">
 			<h1>LockeIn</h1>
@@ -14,7 +16,7 @@ templ Index() {
 					<label for="name">Achieve this:</label>
 					<input type="text" id="name" name="name"/>
 					<label for="deadline">By then:</label>
-					<input type="datetime-local" id="deadline" name="deadline" value="2024-10-27T22:45" />
+					<input type="datetime-local" id="deadline" name="endDate" value="2024-10-27T22:45" />
 					<input type="submit" value="Submit"/>
 				</form>
 			</div>
