--- a/components/index.templ
+++ b/components/index.templ
@@ -12,7 +12,7 @@ templ Index() {
 			<link rel="icon" href="/assets/favicon.ico"/>
 		</head>
 		<body hx-boost="true">
-			<h1>LockeIn</h1>
+			<h1>🎯 LockeIn</h1>
 			<div id="app">
 				<form action="/goal" method="post" hx-post="/goal" hx-target="#app" hx-push-url="true">
 					<label for="name">Achieve this:</label>
