Use templ template composition for goal views

--- a/components/index.templ
+++ b/components/index.templ
@@ -13,15 +13,7 @@ templ Index() {
 		</head>
 		<body hx-boost="true">
 			<h1>🎯 LockeIn</h1>
-			<div id="app">
-				<form action="/goal" method="post" hx-post="/goal" hx-target="#app" hx-push-url="true">
-					<label for="name">Achieve this:</label>
-					<input type="text" id="name" name="name"/>
-					<label for="deadline">By then:</label>
-					<input type="datetime-local" id="deadline" name="endDate" value="2024-10-27T22:45"/>
-					<input type="submit" value="Submit"/>
-				</form>
-			</div>
+            { children... }
 		</body>
 	</html>
 }
