--- a/components/goal.templ
+++ b/components/goal.templ
@@ -1,7 +1,6 @@
 package views
 
 import (
-    "fmt"
 	"github.com/nigogo/locke-in/services"
 )
 
@@ -28,23 +27,22 @@ templ Goal(goal services.Goal) {
 						class="progress-bar"
 						role="progressbar"
 						aria-valuenow="0"
-						style="width:0"
-						_={
-              fmt.Sprintf(`
-						    on load
-                  set nowDate to Date.now()
-                  set startDate to "%d"
-                  set endDate to "%d"
-                  set total to endDate - startDate
-                  set currentPercent to ((nowDate - startDate) / total) * 100
-                  log "now\t" + nowDate
-                  log "start\t" + startDate
-                  log "end\t" + endDate
-                  log "total\t" + total
-                  log "cur %%\t" + currentPercent
-                  set my *width to currentPercent %%
-						    `, goal.StartDate.Unix() * 1000, goal.EndDate.Unix() * 1000)
-						}
+						style="animation:bar 5s linear;"
+					></div>
+				</div>
+        
+				<div class="progress">
+					<div
+						id="progress-bar"
+						class="progress-bar"
+						role="progressbar"
+						aria-valuenow="0"
+            _="
+              on load
+                set *width to '40%'
+                then wait 20ms
+                then transition *width to '100%' using 'all 10s linear'  
+            "
 					></div>
 				</div>
 			</p>
