--- a/assets/style.css
+++ b/assets/style.css
@@ -65,6 +65,7 @@ a:hover {
   background-color: #f5f5f5;
   border-radius: 4px;
   box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+  position: relative;
 }
 
 .progress-bar {
@@ -78,6 +79,28 @@ a:hover {
   background-color: #337ab7;
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
   /*transition: width .6s ease;*/
+  z-index: 1;
+}
+
+.progress-bar::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+}
+
+.progress-bar::before {
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.2) 1px,
+    transparent 1px
+  );
+  background-size: 10% 100%
 }
 
 @keyframes bar {
