--- a/components/goal-form.templ
+++ b/components/goal-form.templ
@@ -1,13 +1,18 @@
 package views
 
-templ GoalForm() {
-    @Index() {
-        <form action="/goal" method="post" hx-post="/goal" hx-push-url="true" hx-target="body">
-            <label for="name">Achieve this:</label>
-            <input type="text" id="name" name="name"/>
-            <label for="deadline">By then:</label>
-            <input type="datetime-local" id="deadline" name="endDate" value="2024-11-03T20:25"/>
-            <input type="submit" value="Submit"/>
-        </form>
+import "github.com/nigogo/locke-in/services"
+
+templ GoalForm(achievedGoals []services.Goal) {
+  @Index() {
+    <form action="/goal" method="post" hx-post="/goal" hx-push-url="true" hx-target="body">
+      <label for="name">Achieve this:</label>
+      <input type="text" id="name" name="name"/>
+      <label for="deadline">By then:</label>
+      <input type="datetime-local" id="deadline" name="endDate" value="2024-11-03T20:25"/>
+      <input type="submit" value="Submit"/>
+    </form>
+    if len(achievedGoals) > 0 {
+      @GoalTable(achievedGoals)
     }
+  }
 }
