--- a/components/index.templ
+++ b/components/index.templ
@@ -9,6 +9,7 @@ templ Index() {
 			<script src="/assets/htmx.min.js"></script>
 			<script src="/assets/_hyperscript.min.js"></script>
 			<link rel="stylesheet" href="/assets/style.css"/>
+			<link rel="stylesheet" href="/assets/button.css"/>
 			<link rel="icon" href="/assets/favicon.ico"/>
 		</head>
 		<body hx-boost="true">
