--- a/assets/style.css
+++ b/assets/style.css
@@ -2,16 +2,20 @@
 /* Standardized Theme Variables for Light and Dark Modes */
 :root {
   /* Light Theme */
-  --color-background: linear-gradient(180deg, hsl(204, 100%, 55%), hsl(204, 100%, 65%));
-  --color-surface: #ffffff;   /* White surface elements like buttons and inputs */
+  --color-background: #af99ff;
+  --color-surface: #33aaff;   /* White surface elements like buttons and inputs */
   --color-primary: #ffb74d;   /* Warm yellow for primary actions */
   --color-secondary: #f0a500; /* Bright secondary for highlights */
-  --color-accent: #ff5722;    /* Strong accent color for special elements */
+  --color-accent: #ff495c;    /* Strong accent color for special elements */
   --color-text-primary: #1a1a1a; /* Dark primary text color for contrast */
   --color-text-secondary: #333333; /* Slightly lighter secondary text color */
   --color-border: #b0c4de;    /* Border color to match light contrast */
   --color-progress-bg: #dce5f3; /* Light blue background for progress bar */
   --color-progress-bar: #ffb74d; /* Primary warm yellow for progress bar */
+  --color-background-image:
+radial-gradient(at 34% 7%, hsla(271,83%,79%,1) 0px, transparent 50%),
+radial-gradient(at 54% 92%, hsla(175,85%,62%,1) 0px, transparent 50%),
+radial-gradient(at 41% 35%, hsla(56,99%,77%,1) 0px, transparent 50%);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,7 +36,11 @@
 
 /* General Styles */
 body {
-  background: var(--color-background);
+  background-color:#af99ff;
+  background-image:
+  radial-gradient(at 34% 7%, hsla(271,83%,79%,1) 0px, transparent 80%),
+  radial-gradient(at 54% 92%, hsla(175,85%,62%,1) 0px, transparent 80%),
+  radial-gradient(at 41% 35%, hsla(56,99%,77%,1) 0px, transparent 80%);
   color: var(--color-text-primary);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -57,6 +65,8 @@ form {
   display: flex;
   flex-direction: column;
   gap: 1em;
+  border: 4px solid hsla(0, 0%, 100%, 0.4);
+  box-shadow: inset 3px -5px 0 hsla(0, 0%, 0%, 0.3), 0 3px 4px 0 hsla(0, 0%, 0%, 0.2);
 }
 
 label {
