--- a/assets/button.css
+++ b/assets/button.css
@@ -1,15 +1,18 @@
 :root {
-  --button-bg-color: #0070c0;
-  --button-hover-bg-color: #0083E0;
-  --button-active-bg-color: hsl(204, 100%, 40%);
-  --button-focus-border-color: hsl(204, 100%, 50%);
-  --button-focus-outline-color: #FF495C;
+  --button-bg-color: hsl(0, 100%, 100%);
+  --button-text-color: hsla(0, 0%, 0%, 0.6);
+  --button-border-color: hsla(0, 0%, 0%, 0.5);
+  --button-hover-bg-color: hsl(0, 0%, 80%);
+  --button-active-bg-color: hsl(0, 0%, 60%);
+  --button-shadow-color: hsla(0, 0%, 0%, 0.2);
+  --focus-outline: 3px solid #FFA69E;
 }
 
-button, input[type="submit"] {
+button, input {
   background-color: var(--button-bg-color);
-  border: 2px solid hsla(0, 0%, 100%, 0.3);
-  color: hsla(0, 0%, 100%, 1);
+  border: 2px solid var(--button-border-color);
+  border-radius: 6px;
+  color: var(--button-text-color);
   padding: 10px 20px;
   font-size: 16px;
   font-weight: bold;
@@ -17,39 +20,26 @@ button, input[type="submit"] {
   cursor: pointer;
   outline: none;
   outline-offset: 4px;
-  border-radius: 6px;
-  box-shadow: inset 0 -5px 0 hsla(0, 0%, 0%, 0.3), 0 3px 4px 0 hsla(0, 0%, 0%, 0.2);
-  text-shadow: 1px 1px 0 hsla(0, 0%, 100%, 0.15), -1px -1px 0 hsla(0, 0%, 0%, 0.3);
+  box-shadow: inset 0 -5px 0 hsla(0, 0%, 0%, 0.3), 0 3px 4px 0 var(--button-shadow-color);
   transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
 
-button:hover, input[type="submit"]:hover {
+button:hover {
   background-color: var(--button-hover-bg-color);
-  box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 hsla(0, 0%, 0%, 0.2);
-  border-color: hsla(0, 0%, 100%, 0.5);
+  box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 var(--button-shadow-color);
 }
 
-button:active, input[type="submit"]:active {
+button:active {
   background-color: var(--button-active-bg-color);
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 0%, 0.3), 0 0px 1px 0 hsla(0, 0%, 0%, 0.2);
-  border-color: hsla(0, 0%, 100%, 0.7);
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 0%, 0.3), 0 0px 1px 0 var(--button-shadow-color);
 }
 
-button:focus, input[type="submit"]:focus {
-  outline: 3px solid var(--button-focus-border-color);
-  outline-color: var(--button-focus-outline-color);
-  background-color: var(--button-hover-bg-color);
-  box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 hsla(0, 0%, 0%, 0.2);
-  border-color: hsla(0, 0%, 100%, 0.5);
+button:focus-visible, input:focus-visible {
+  outline: var(--focus-outline);
 }
 
-button:focus:not(:focus-visible), input[type="submit"]:focus:not(:focus-visible) {
-  outline: none;
-}
-
-button:focus:active, button:focus-visible:active, input[type="submit"]:focus:active, input[type="submit"]:focus-visible:active {
-  outline: none;
-  background-color: var(--button-active-bg-color);
-  box-shadow: inset 0 -1px 0 hsla(0, 0%, 0%, 0.3), 0 0px 1px 0 hsla(0, 0%, 0%, 0.2);
-  border-color: hsla(0, 0%, 100%, 0.7);
+input {
+  text-transform: none;
+  padding: 10px 10px;
+  box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 var(--button-shadow-color), inset 0 1px 4px 0 var(--button-shadow-color);
 }
