--- a/assets/button.css
+++ b/assets/button.css
@@ -24,22 +24,22 @@ button, input {
   transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 }
 
-button:hover {
+button:hover, input[type="submit"]:hover {
   background-color: var(--button-hover-bg-color);
   box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 var(--button-shadow-color);
 }
 
-button:active {
+button:active, input[type="submit"]:active {
   background-color: var(--button-active-bg-color);
   box-shadow: inset 0 -1px 0 hsla(0, 0%, 0%, 0.3), 0 0px 1px 0 var(--button-shadow-color);
 }
 
-button:focus-visible, input:focus-visible {
-  outline: var(--focus-outline);
-}
-
-input {
+input:not([type="submit"]) {
   text-transform: none;
   padding: 10px 10px;
   box-shadow: inset 0 -3px 0 hsla(0, 0%, 0%, 0.3), 0 1px 2px 0 var(--button-shadow-color), inset 0 1px 4px 0 var(--button-shadow-color);
+}
+
+button:focus-visible, input:focus-visible {
+  outline: var(--focus-outline);
 }
