--- a/assets/style.css
+++ b/assets/style.css
@@ -58,13 +58,13 @@ form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 0;
 }
 
 label {
   font-weight: bold;
   text-transform: uppercase;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.2em;
 }
 
 /* Achieved Goals Table */
