--- a/components/index.templ
+++ b/components/index.templ
@@ -8,9 +8,10 @@ templ Index() {
 			<meta charset="UTF-8"/>
 			<script src="/assets/htmx.min.js"></script>
 			<script src="/assets/_hyperscript.min.js"></script>
-			<link rel="stylesheet" href="/assets/style.css"/>
+			<link rel="stylesheet" href="/assets/base.css"/>
       <link rel="stylesheet" href="/assets/layout.css"/>
-			<link rel="stylesheet" href="/assets/button.css"/>
+			<link rel="stylesheet" href="/assets/input.css"/>
+			<link rel="stylesheet" href="/assets/progress.css"/>
 			<link rel="icon" href="/assets/favicon.ico"/>
 		</head>
 		<body hx-boost="true">
