--- a/components/goal.templ
+++ b/components/goal.templ
@@ -62,7 +62,7 @@ templ Goal(goal services.Goal, achievedGoals []services.Goal) {
         }
       </p>
       if len(achievedGoals) > 0 {
-        @GoalTable(achievedGoals)
+        @GoalHistory(achievedGoals)
       }
 		</div>
 	}
