--- a/components/goal-table.templ
+++ b/components/goal-table.templ
@@ -2,7 +2,7 @@ package views
 
 import "github.com/nigogo/locke-in/services"
 
-templ GoalTable(goals []services.Goal) {
+templ GoalHistory(goals []services.Goal) {
   <table>
     <thead>
       <tr>
