--- a/components/index.templ
+++ b/components/index.templ
@@ -12,6 +12,7 @@ templ Index() {
       <link rel="stylesheet" href="/assets/layout.css"/>
 			<link rel="stylesheet" href="/assets/input.css"/>
 			<link rel="stylesheet" href="/assets/progress.css"/>
+			<link rel="stylesheet" href="/assets/drawer.css"/>
 			<link rel="icon" href="/assets/favicon.ico"/>
 		</head>
 		<body hx-boost="true">
