--- a/components/goal-history.templ
+++ b/components/goal-history.templ
@@ -4,7 +4,9 @@ import "github.com/nigogo/locke-in/services"
 
 templ GoalHistory(goals []services.Goal) {
   <div class="drawer">
-    <button _="on click toggle .open on my parentElement">Open</button>
+    <button _="on click toggle .open on my parentElement">
+      History
+    </button>
     <table>
       <thead>
       <tr>
