--- a/assets/base.css
+++ b/assets/base.css
@@ -97,3 +97,14 @@ a {
 a:hover {
   color: var(--element-color);
 }
+
+.panel {
+  position: fixed;
+  background-color: var(--button-bg-color);
+  border: 2px solid var(--button-border-color);
+  border-radius: 6px;
+  color: var(--button-text-color);
+  padding: 10px 20px;
+  font-size: 16px;
+  box-shadow: inset 0 -5px 0 hsla(0, 0%, 0%, 0.3), 0 3px 4px 0 var(--button-shadow-color);
+}
